# TesiLorenzo_elaborato

./: CMakeLists.txt  Data.h  Item.cpp  Item.h  List.cpp  List.h  Observer.h  README.md  Subject.h  User.cpp  User.h  main.cpp
Test/: CMakeLists.txt  RunAllTests.cpp  TestItem.cpp  TestList.cpp  TestUser.cpp  runAllTest.cpp
